# projeto_crud_postgres_streamlit

./: README.md  docker-compose.yaml  pyproject.toml
backend/: main.py
backend/crud/: crud.py
backend/database/: database.py
backend/models/: models.py
backend/routers/: router.py
backend/schema/: schema.py
frontend/: app.py
frontend/.streamlit/: config.toml
