[project]
name = "projeto-crud-postgres-streamlit"
version = "0.1.0"
description = "Projeto Crud Utilizando FastApi, Postgress e Streamlit"
authors = [
    {name = "IgorNatann",email = "Igornatan4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "pydantic[email] (>=2.13.1,<3.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
